--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,21 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="animate.css" type="text/css">
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900&display=swap');
+      *{
+        margin: 0;
+        padding: 0;
+        font-family: 'Raleway', sans-serif;
+      }
+      body{
+        font-family: 'Courier New', Courier, monospace;
+        color: rgb(61, 61, 61);
+      }
+      a{
+        text-decoration: none;
+      }
+    </style>
     <title>client</title>
   </head>
   <body>
