--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="https://storage.cloud.google.com/image-ecommerce-josprima-site/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="animate.css" type="text/css">
     <style>
@@ -22,7 +22,7 @@
         text-decoration: none;
       }
     </style>
-    <title>client</title>
+    <title>Tokopadia Ecommercez</title>
   </head>
   <body>
     <noscript>
