--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
     <noscript>
       <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
