--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <style>
+      body {
+        background-image: linear-gradient(to right, #8e8d8e, #9d9c9e, #adacae, #bcbcbf, #cbccd0, #cdd0d4, #cfd3d8, #d1d7dc, #c7cfd3, #bdc7ca, #b4bfc1, #abb7b7) !important;
+      }
+    </style>
     <title>Grabah Store</title>
   </head>
   <body>
