--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,5 +15,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
   </body>
 </html>
