--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/e9ec0d13c8.js"></script>
-    <title>client</title>
+    <title>VCOMMERCE</title>
   </head>
   <body>
     <noscript>
